[Refactor] 위시리스트, 히스토리 도메인 코드 리팩토링 (#75)
* Refactor: 사용하지 않는 요소 삭제

* Refactor: sonarLint 적용

* Refactor: 위시리스트 도메인 서비스 로직 분리

* Refactor: 서비스 로직 분리

* feat:위시리스트 중복 검사

* refactor: 줄간격 수정

* Feat:코멘트 반영

* refactor: 코멘트 반영

* refactor: wishlist 도메인 메소드명 변경

* refactor: toList() 반영

* fix: merge conflict 해결

---------

Co-authored-by: wooing1084 <kmjung1515@naver.com>