@@ -6,6 +6,8 @@ import com._pi.benepick.domain.members.entity.Members;
 import com._pi.benepick.domain.wishlists.dto.WishlistResponse;
 import com._pi.benepick.domain.wishlists.entity.Wishlists;
 import com._pi.benepick.domain.wishlists.repository.WishlistsRepository;
+import com._pi.benepick.global.common.exception.ApiException;
+import com._pi.benepick.global.common.response.code.status.ErrorStatus;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -15,7 +17,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,19 +30,16 @@ public class WishlistsQueryServiceImpl implements WishlistsQueryService{
     @Override
     public WishlistResponse.WishlistListDTO getWishList(GoodsStatus goodsStatus, Integer page, Integer size, GoodsFilter sortBy, Members members){
         PageRequest pageRequest=createPageRequest(page, size, sortBy);
-
         String memberId = members.getId();
-
         Page<Wishlists> wishlistsPage;
         if (GoodsFilter.POPULAR.equals(sortBy)) {
             wishlistsPage = wishlistsRepository.searchWishlistsByRaffleCount(memberId, goodsStatus, pageRequest);
-
         } else {
             wishlistsPage = wishlistsRepository.findAllByMemberId_IdAndGoodsId_GoodsStatus(memberId, goodsStatus, pageRequest);
         }
         List<WishlistResponse.WishlistDTO> wishlistDTOS = (wishlistsPage != null ? wishlistsPage.getContent() : Collections.emptyList()).stream()
                 .map(w -> WishlistResponse.WishlistDTO.from((Wishlists) w))
-                .collect(Collectors.toList());
+                .toList();
 
         return WishlistResponse.WishlistListDTO.builder()
                 .wishlistDTOS(wishlistDTOS)
@@ -62,5 +60,15 @@ public class WishlistsQueryServiceImpl implements WishlistsQueryService{
                 sort = Sort.by(Sort.Order.desc("id")); // 기본
         }
         return PageRequest.of(page, size, sort);
+    }
+
+    @Override
+    public Wishlists getWishlistsById(Long id){
+        return wishlistsRepository.findById(id).orElseThrow(()->new ApiException(ErrorStatus._WISHLIST_NOT_FOUND));
+    }
+
+    @Override
+    public boolean isWishlistsEmpty(Members members, Long id){
+        return wishlistsRepository.findWishlistsByGoodsId_IdAndMemberId(id,members).isEmpty();
     }
 }
